--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +26,7 @@
     "core-js": "^2.4.1",
     "express": "^4.15.3",
     "mongoose": "^4.11.2",
+    "ng2-smart-table": "^1.2.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
